# robogames_2024

./: .gitignore  .gitmodules  README.md  RoboMagellan 2024 Encoder Motor Controller Choices.docx  Useful Info.txt  install-dependencies.sh  setup_pi.sh  startup.sh
CAD Files/: Constants.scad  RoboMagellan Bot.scad  VersaFrame.scad
arduino_code/: README.md
arduino_code/libraries/AveragingBuffer/: AveragingBuffer.h
arduino_code/libraries/PID/: PID.cpp  PID.h
arduino_code/pid_tuning/: pid_tuning.ino
arduino_code/robomagellan_2024/: PID.cpp  PID.h  robomagellan_2024.ino
arduino_code/talon_srx_repl/: talon_srx_repl.ino
prototyping_code/cimcoder_test/: cimcoder_test.ino
prototyping_code/cpp_testing_grounds/: AverageBuffer.cpp
prototyping_code/gps_distance/: gps_distance.ino
prototyping_code/i2c_scanner/: i2c_scanner.ino
prototyping_code/imu_bno086_test/: imu_bno086_test.ino
prototyping_code/imu_test/: imu_test.ino
prototyping_code/python_testing_grounds/: ramp_motors.py  step_motors.py
prototyping_code/talon_test/: talon_test.ino  talon_test.py
ros2_ws/src/differential_drive_controller/: CMakeLists.txt  differential_drive_plugin.xml  package.xml
ros2_ws/src/differential_drive_controller/include/differential_drive_controller/: differential_drive_controller.hpp  odometry.hpp  speed_limiter.hpp
ros2_ws/src/differential_drive_controller/src/: differential_drive_controller.cpp  differential_drive_controller_parameter.yaml  odometry.cpp  speed_limiter.cpp
ros2_ws/src/robomagellan_bringup/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/robomagellan_bringup/launch/: competition.launch.py  sim.launch.py
ros2_ws/src/robomagellan_controller/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/robomagellan_controller/config/: joy_config.yaml  joy_teleop.yaml  robomagellan_controllers.yaml
ros2_ws/src/robomagellan_controller/launch/: controller.launch.py  joystick_teleop.launch.py
ros2_ws/src/robomagellan_description/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/robomagellan_description/config/: my_controllers.yaml
ros2_ws/src/robomagellan_description/description/: gazebo_control.xacro  robomagellan.urdf.xacro  robomagellan_core.urdf.xacro  ros2_control.xacro
ros2_ws/src/robomagellan_description/launch/: display.launch.py  gazebo.launch.py  launch_sim.launch.py  robot_visualization.launch.py
ros2_ws/src/robomagellan_description/rviz/: display.rviz  sim.rviz
ros2_ws/src/robomagellan_description/urdf/: gazebo.xacro  robomagellan.urdf.xacro  ros2_control.xacro
ros2_ws/src/robomagellan_description/worlds/: robomagellan_world.sdf
ros2_ws/src/robomagellan_firmware/: CMakeLists.txt  README.md  package.xml  robomagellan_interface.xml
ros2_ws/src/robomagellan_firmware/include/robomagellan_firmware/: robomagellan_interface.hpp
ros2_ws/src/robomagellan_firmware/launch/: hardware_interface.launch.py
ros2_ws/src/robomagellan_firmware/src/: robomagellan_interface.cpp
ros2_ws/src/robomagellan_hw_interface/: CMakeLists.txt  package.xml
ros2_ws/src/robomagellan_hw_interface/launch/: hardware_interface.launch.py
ros2_ws/src/robomagellan_lidar/: CMakeLists.txt  package_ros2.xml
ros2_ws/src/robomagellan_lidar/launch/: ms200_scan.launch.py
ros2_ws/src/robomagellan_localization/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/robomagellan_localization/include/robomagellan_localization/: odometry_motion_model.hpp
ros2_ws/src/robomagellan_localization/launch/: odometry_motion_model.launch.py
ros2_ws/src/robomagellan_localization/src/: odometry_motion_model.cpp
ros_workspace/src/arduino_connector/: CMakeLists.txt  package.xml
ros_workspace/src/arduino_connector/launch/: arduino_connector.launch
ros_workspace/src/arduino_connector/msg/: Encoders.msg  GPS.msg  SensorStates.msg
ros_workspace/src/arduino_connector/src/: ArduinoConnector.py
ros_workspace/src/competition_files/: CMakeLists.txt  package.xml
ros_workspace/src/competition_files/launch/: robomagellan.launch  sim-competition.launch
ros_workspace/src/coordinate_parser/: CMakeLists.txt  package.xml
ros_workspace/src/coordinate_parser/src/: CoordinateParser.cpp
ros_workspace/src/coordinate_parser/test/: coordinate_parser_tests.cpp  (+4 more)
ros_workspace/src/diff_drive_interface/: CMakeLists.txt  package.xml
ros_workspace/src/diff_drive_interface/include/diff_drive_interface/: generic_hw_interface.h
ros_workspace/src/differential_drive_controller/: CMakeLists.txt  differential_drive_controller_plugins.xml  package.xml
ros_workspace/src/differential_drive_controller/cfg/: DifferentialDriveController.cfg
ros_workspace/src/differential_drive_controller/include/differential_drive_controller/: DifferentialDriveController.h  Odometry.h  SpeedLimiter.h
ros_workspace/src/differential_drive_controller/src/: Odometry.cpp  SpeedLimiter.cpp
ros_workspace/src/math_utils/: CMakeLists.txt  package.xml
ros_workspace/src/navsat_transform/: CMakeLists.txt  package.xml
ros_workspace/src/odometry/: CMakeLists.txt  package.xml
ros_workspace/src/pure_pursuit_controller/: CMakeLists.txt  package.xml
ros_workspace/src/robomagellan_2024_description/: CMakeLists.txt  package.xml
ros_workspace/src/robomagellan_2024_gazebo/: CMakeLists.txt  package.xml
ros_workspace/src/rpi_motors/: CMakeLists.txt  package.xml  setup.py
ros_workspace/src/rpi_motors/cfg/: DynamicParam.cfg
ros_workspace/src/rpi_motors/config/: DynamicParam.cfg
ros_workspace/src/rpi_motors/launch/: rpi_motors.launch
ros_workspace/src/rpi_motors/src/: rpi_motors_node.py
ros_workspace/src/rpi_motors/srv/: RPIMotors.srv  RPIMotorsLinAng.srv
ros_workspace/src/runner/: CMakeLists.txt  package.xml
ros_workspace/src/sim_model/: CMakeLists.txt  package.xml
ros_workspace/src/sim_model/robomagellan_model/: model.config  model.sdf
ros_workspace/src/utils/: CMakeLists.txt  package.xml
ros_workspace/src/utils/launch/: send_lin_ang_commands.launch
ros_workspace/src/utils/src/: send_lin_ang_commands.cpp
udev_rules/: 99-arduino-uno-r3-clone.rules  99-arduino-uno-r4.rules  99-arduino.rules  README.md
(+39 files in other folders)
