<?xml version="1.0"?>
<package format="3">
  <name>robomagellan_controller</name>
  <version>0.2.0</version>
  <description>Config params and launch files for the differential drive controller</description>
  <maintainer email="rcxking@gmail.com">Bryant Pong</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
