<?xml version="1.0"?>
<package format="2">
  <name>competition_files</name>
  <version>0.1.0</version>
  <description>
    Contains launch files to launch the robot for the RoboMagellan 2024
    competition.
  </description>

  <maintainer email="rcxking@gmail.com">Bryant Pong</maintainer>
  <license>proprietary</license>
  <buildtool_depend>catkin</buildtool_depend>
</package>
