<?xml version="1.0"?>
<package format="2">
  <name>diff_drive_interface</name>
  <version>0.1.0</version>
  <description>Real robot differential drive hardware interface</description>

  <maintainer email="rcxking@gmail.com">Bryant Pong</maintainer>
  <license>proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>actionlib</depend>
  <depend>cmake_modules</depend>
  <depend>control_msgs</depend>
  <depend>control_toolbox</depend>
  <depend>controller_manager</depend>
  <depend>hardware_interface</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>transmission_interface</depend>
  <depend>urdf</depend>
</package>
