<?xml version="1.0"?>
<package format="2">
  <name>differential_drive_controller</name>
  <version>0.1.0</version>
  <description>The differential_drive_controller package</description>

  <maintainer email="rcxking@gmail.com">Bryant Pong</maintainer>

  <license>proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>controller_interface</depend>
  <depend>control_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>geometry_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>nav_msgs</depend>
  <depend>realtime_tools</depend>
  <depend>tf</depend>

  <build_depend>boost</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>urdf</build_depend>

  <build_export_depend>boost</build_export_depend>

  <exec_depend>pluginlib</exec_depend>
  <exec_depend>urdf</exec_depend>

  <test_depend>controller_manager</test_depend>
  <test_depend>rosgraph_msgs</test_depend>
  <test_depend>rostest</test_depend>
  <test_depend>rostopic</test_depend>
  <test_depend>std_srvs</test_depend>
  <test_depend>xacro</test_depend>

  <export>
    <controller_interface plugin="${prefix}/differential_drive_controller_plugins.xml"/>
  </export>
</package>
